# actix-fun

./: Cargo.toml  config.json  test.json
src/: alert_analyser.rs  alert_emailer.rs  error_logger.rs  kafka_parser.rs  kafka_source.rs  main.rs  multiplexer.rs  redis_client.rs  redis_formatter.rs  webhook_caller.rs
