[package]
name = "actor-transactor"
version = "0.1.0"
authors = ["Maté Antunovic <just.mate.antunovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] } 
serde = "1.0.133"
