[package]
name = "actor-transactor"
version = "0.1.0"
authors = ["Maté Antunovic <just.mate.antunovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] } 
serde = "1.0.133"
kafka = { version = "0.8" }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.59"
redis = "0.21.5"
